--- a/booru-lib/Cargo.toml
+++ b/booru-lib/Cargo.toml
@@ -24,5 +24,7 @@ serde_derive = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 url = "2.2"
 once_cell = "1.5"
+rand = "0.8"
+uuid = { version = "0.8", features = ["serde", "v4"] }
 regex = "1.4"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
